<resources>
    <string name="app_name">BLE</string>

    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="scanning">Scanning</string>
    <string name="start">Start</string>
    <string name="messages">Messages</string>
    <string name="stop">Stop</string>
    <string name="disconnect">Disconnect</string>
    <string name="ble_servers">BLE Servers</string>
    <string name="send">Send</string>
    <string name="logs">Logs</string>
    <string name="clear">Clear</string>
    <string name="connect">Connect</string>
    <string name="action">Action</string>
    <string name="restart">Restart</string>
</resources>
